--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "subst"
 description = "shell-like variable substitution"
-version = "0.0.1-reserved"
+version = "0.1.0"
 license = "BSD-2-Clause OR Apache-2.0"
 repository = "https://github.com/fizyr/subst"
 documentation = "https://docs.rs/subst"
