--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,19 @@ categories = ["template-engine", "value-formatting"]
 
 edition = "2021"
 
+[features]
+yaml = ["serde", "serde_yaml"]
+
 [dependencies]
 memchr = "2.4.1"
+serde = { version = "1.0.0", optional = true }
+serde_yaml = { version = "0.8.23", optional = true }
 unicode-width = "0.1.9"
 
 [dev-dependencies]
 assert2 = "0.3.6"
+subst = { path = ".", features = ["yaml"] }
+serde = { version = "1.0.0", features = ["derive"] }
+
+[package.metadata.docs.rs]
+all-features = true
