--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ edition = "2018"
 yaml = ["serde", "serde_yaml"]
 
 [dependencies]
+bstr = { version = "1.6.0", default-features = false, features = ["std"] }
 memchr = "2.4.1"
 serde = { version = "1.0.0", optional = true }
 serde_yaml = { version = "0.9.13", optional = true }
