Some linting and minor upgrades
* Fixed some spelling
* Migrate to edition 2021
* Use `dep:` syntax in Cargo.toml to avoid creating implicit features
* Fix a number of clippy suggestions (must_use, inline format args, map_or,
* run `cargo +nightly fmt` to keep code consistently formatted
* Marked some code blocks as `#[rustfmt::skip]`
* Use the `?` operator instead of `.into()` for error returning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ publish = ["crates-io"]
 keywords = ["substitution", "expansion", "variable", "parameter", "shell"]
 categories = ["template-engine", "value-formatting"]
 
-edition = "2018"
+edition = "2021"
 
 [features]
-yaml = ["serde", "serde_yaml"]
+yaml = ["dep:serde", "dep:serde_yaml"]
 
 [dependencies]
 memchr = "2.4.1"
