--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,23 @@ categories = ["template-engine", "value-formatting"]
 edition = "2021"
 
 [features]
+json = ["dep:serde", "dep:serde_json"]
 toml = ["dep:serde", "dep:toml"]
 yaml = ["dep:serde", "dep:serde_yaml"]
-preserve-order = ["toml?/preserve_order"]
+preserve-order = ["toml?/preserve_order", "serde_json?/preserve_order"]
 doc-cfg = []
 
 [dependencies]
 memchr = "2.4.1"
 serde = { version = "1.0.0", optional = true }
-serde_yaml = { version = "0.9.13", optional = true }
+serde_json = { version = "1.0.118", optional = true }
+serde_yaml = { version = "0.9.34", optional = true }
 toml = { version = "0.8.14", optional = true }
 unicode-width = "0.1.9"
 
 [dev-dependencies]
 assert2 = "0.3.6"
-subst = { path = ".", features = ["toml", "yaml"] }
+subst = { path = ".", features = ["json", "toml", "yaml"] }
 serde = { version = "1.0.0", features = ["derive"] }
 
 [package.metadata.docs.rs]
