--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ categories = ["template-engine", "value-formatting"]
 edition = "2021"
 
 [features]
+# Implement `VariableMap` for `indexmap::IndexMap`.
+indexmap = ["dep:indexmap"]
+
 # Enable support for performing substitution in all string values of a JSON document.
 json = ["dep:serde", "dep:serde_json"]
 
@@ -30,6 +33,7 @@ preserve-order = ["toml?/preserve_order", "serde_json?/preserve_order"]
 doc-cfg = []
 
 [dependencies]
+indexmap = { version = "2.5.0", optional = true }
 memchr = "2.4.1"
 serde = { version = "1.0.0", optional = true }
 serde_json = { version = "1.0.118", optional = true }
