--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,17 +19,15 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --workspace --all-targets --features indexmap,json,toml,yaml --color=always
+        run: cargo +stable build --workspace --all-targets --features indexmap,json,toml,yaml --color=always
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --workspace --all-targets --features indexmap,json,toml,yaml --color=always
+        run: cargo +stable test --workspace --all-targets --features indexmap,json,toml,yaml --color=always
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --workspace --all-targets --features indexmap,json,toml,yaml
+      - name: Install miri
+        run: rustup +nightly component add miri
+      - name: Run miri
+        run: cargo +nightly miri test --workspace --all-targets --features indexmap,json,toml,yaml --color=always
