feat(serde): Enable serialization & deserialization for `Template*`
- [x] Implement `serde::Serialize` and `serde::Deserialize` for `Template`, `TemplateBuf`,
  `ByteTemplate` and `ByteTemplateBuf`
- [x] Add `serde` feature to crate, to control implementation of
  `serde::Serialize` and `serde::Deserialize`
- [x] make `json`, `toml` and `yaml` features respect `serde` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,19 +18,21 @@ edition = "2021"
 indexmap = ["dep:indexmap"]
 
 # Enable support for performing substitution in all string values of a JSON document.
-json = ["dep:serde", "dep:serde_json"]
+json = ["serde", "dep:serde_json"]
 
 # Enable support for performing substitution in all string values of a TOML document.
-toml = ["dep:serde", "dep:toml"]
+toml = ["serde", "dep:toml"]
 
 # Enable support for performing substitution in all string values of a YAML document.
-yaml = ["dep:serde", "dep:serde_yaml"]
+yaml = ["serde", "dep:serde_yaml"]
 
 # Preserve the order of fields in JSON objects and TOML tables (YAML always preserves the order).
 preserve-order = ["toml?/preserve_order", "serde_json?/preserve_order"]
 
 # Enable #[doc(cfg...)] annotations for optional parts of the library (requires a nightly compiler).
 doc-cfg = []
+
+serde = [ "dep:serde" ]
 
 [dependencies]
 indexmap = { version = "2.5.0", optional = true }
@@ -45,6 +47,7 @@ unicode-width = "0.1.9"
 assert2 = "0.3.6"
 subst = { path = ".", features = ["json", "toml", "yaml"] }
 serde = { version = "1.0.0", features = ["derive"] }
+serde_test = "1.0.177"
 
 [package.metadata.docs.rs]
 all-features = true
