--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ edition = "2021"
 # Implement `VariableMap` for `indexmap::IndexMap`.
 indexmap = ["dep:indexmap"]
 
+# Enable serde Deserialize and Serialize implementations for templates.
+serde = ["dep:serde"]
+
 # Enable support for performing substitution in all string values of a JSON document.
 json = ["serde", "dep:serde_json"]
 
@@ -31,8 +34,6 @@ preserve-order = ["toml?/preserve_order", "serde_json?/preserve_order"]
 
 # Enable #[doc(cfg...)] annotations for optional parts of the library (requires a nightly compiler).
 doc-cfg = []
-
-serde = [ "dep:serde" ]
 
 [dependencies]
 indexmap = { version = "2.5.0", optional = true }
